# deskcoach

./: .gitignore  AGENTS.md  README.md  config.toml  main.spec  pyproject.toml  pytest.ini  requirements.txt
src/deskcoach/: app.py  config.py  main.py
src/deskcoach/models/: store.py
src/deskcoach/services/: api_client.py  notifier.py  reminder.py  scheduler.py  session_watcher.py
src/deskcoach/utils/: qt_helpers.py  time_stats.py
src/deskcoach/views/: common_widgets.py  main_window.py  settings_dialog.py
tests/: conftest.py  test_api_client.py  test_basic.py  test_config.py  test_notifier.py  test_reminder.py  test_session_watcher_matrix.py  test_stats_window_label.py  test_store_day_start.py  test_time_stats_gaps.py
