[project]
name = "deskcoach"
version = "0.1.0"
description = "DeskCoach is a minimal PyQt6 system tray app for break reminders on Windows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SImon M." }]
license = { text = "MIT" }

# Optional command-line entry point: `deskcoach`
[project.scripts]
deskcoach = "deskcoach.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"deskcoach.resources.icons" = ["*.png", "*.ico"]
